# DRAMPower

./: CMakeLists.txt
memspecs/: JEDEC_8Gb_DDR4-1866_16bit_M.xml
src/xmlparser/: MemSpecParser.cc  MemSpecParser.h
